--- a/010_arrays/010_arrays/010_arrays.csproj
+++ b/010_arrays/010_arrays/010_arrays.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D497414A-5552-425C-A0A1-3B4D068E1BF5}</ProjectGuid>
+    <ProjectGuid>{0F377E26-764B-4ADB-9168-BA3C920B64EA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_010_arrays</RootNamespace>
-    <AssemblyName>010_arrays</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <RootNamespace>_010_Arrays</RootNamespace>
+    <AssemblyName>010_Arrays</AssemblyName>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
